<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/category_confessions"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_confessions"
        android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/image_description"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:background="@color/category_confessions"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:src="@drawable/rcus_seal_300w" />

        <Button
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_shape"
            android:text="@string/history"
            android:textColor="@color/menu_text" />

    <Button
        android:id="@+id/congregations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_shape"
        android:text="@string/congregations"
        android:textColor="@color/menu_text" />

    <Button
        android:id="@+id/creeds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_shape"
        android:text="@string/creeds"
        android:textColor="@color/menu_text" />

    <Button
        android:id="@+id/confessions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_shape"
        android:text="@string/confessions"
        android:textColor="@color/menu_text" />
    <Button
        android:id="@+id/reformed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_shape"
        android:text="@string/reformed"
        android:textColor="@color/menu_text" />
    <Button
        android:id="@+id/sermons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_shape"
        android:text="@string/holiness"
        android:textColor="@color/menu_text" />
    <Button
        android:id="@+id/music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_shape"
        android:text="@string/music"
        android:textColor="@color/menu_text" />

    </LinearLayout>

</ScrollView>